test/spec_vectors/exports/ok/module_29.wat
(module (global $a (export "a") i32 (i32.const 0)))